Captions are now clickable & jump to timestamp, & fix reset view on loading new video

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,3 +27,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.clickable-text {
+  cursor: pointer;
+}
